# ue5-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
config/: cursor-mcp.example.json  cursor-mcp.windows.json
src/ue5_mcp/: __init__.py  config.py  server.py  structures.py
src/ue5_mcp/bridge/: __init__.py  asset_registry.py  asset_scanner.py  audit.py  client.py
src/ue5_mcp/prompts/: __init__.py  workflows.py
src/ue5_mcp/resources/: __init__.py  engine.py
src/ue5_mcp/spatial/: __init__.py  grid.py  schema.py  validator.py
src/ue5_mcp/templates/: structure_templates.json
src/ue5_mcp/tools/: __init__.py  assets.py  blueprints.py  debugging.py  editor.py  environment.py  spatial.py  testing.py
src/ue5_mcp/ui/: __init__.py  chat.py  server.py  settings_store.py
src/ue5_mcp/ui/static/: app.js  index.html  styles.css
tests/: test_environment.py  test_server.py  test_structure_composition.py
